# libalx

./: .gitignore
code/include/: standard.h
code/project/unix/: CMakeLists.txt
code/src/: astar.h  dlist.c  dlist.h  mergesort.c  mergesort.h  queue.c  queue.h  slist.c  slist.h  stack.c  stack.h
test/project/unix/: CMakeLists.txt
test/src/: main.c
